[gd_scene load_steps=8 format=3 uid="uid://dv1cwo11ii0n8"]

[ext_resource type="Resource" uid="uid://ddrmqwl3guset" path="res://tests/data/item_definitions_grid.tres" id="1"]
[ext_resource type="Script" path="res://Inventory/inventory_grid_transfer.gd" id="1_3lncl"]
[ext_resource type="Script" path="res://addons/gloot/core/inventory_grid.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dlbuor5b50tpd" path="res://images/UI/inventar.png" id="2_wj7fa"]
[ext_resource type="Script" path="res://addons/gloot/ui/ctrl_inventory_grid.gd" id="3"]
[ext_resource type="Texture2D" uid="uid://b2hkcwwq10cut" path="res://icon.png" id="5"]
[ext_resource type="Script" path="res://addons/gloot/core/item_slot.gd" id="8_273xl"]

[node name="InventoryGridTransfer" type="Control"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3lncl")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -279.0
offset_top = -343.0
offset_right = -61.0
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
texture = ExtResource("2_wj7fa")
region_rect = Rect2(8, 5, 80, 85)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -99.0
offset_top = -120.0
offset_right = 61.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="PanelContainer" type="Control" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="CtrlInventoryGridLeft" type="Container" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
offset_left = -124.0
offset_top = -142.0
offset_right = -124.0
offset_bottom = -142.0
script = ExtResource("3")
inventory_path = NodePath("../../../../../InventoryGridLeft")
default_item_texture = ExtResource("5")
field_dimensions = Vector2(108.7, 121.26)
draw_grid = false
grid_color = Color(0, 0, 0, 0)

[node name="InventoryGridLeft" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2")
size = Vector2i(4, 4)
item_protoset = ExtResource("1")

[node name="ItemSlot" type="Node" parent="."]
script = ExtResource("8_273xl")
item_protoset = ExtResource("1")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
